--- a/fh-nimbus.desktop
+++ b/fh-nimbus.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Nimbus
 Icon=fh-nimbus
 GenericName=Web Browser
-Comment=PyQt4 Web browser
+Comment=PyQt Web browser
 Exec=/usr/local/bin/nimbus
 MimeType=text/html;application/xhtml_xml;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/file;
 Categories=Network;WebBrowser;
